--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "natural": "^6.8.0",
     "nestjs-cache-manager": "^1.0.3",
     "reflect-metadata": "^0.1.13",
