added mixpanel and dynamodb

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@types/cache-manager": "^4.0.4",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.6.0",
     "cache-manager": "^5.2.4",
     "cache-manager-redis-store": "^3.0.1",
@@ -33,6 +34,7 @@
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
+    "mixpanel": "^0.18.0",
     "mysql2": "^3.11.3",
     "natural": "^6.8.0",
     "nestjs-cache-manager": "^1.0.3",
