--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
+    "lodash": "^4.17.21",
     "mixpanel": "^0.18.0",
     "mysql2": "^3.11.3",
     "natural": "^6.8.0",
